# themis

./: .gitattributes  .gitignore  .themis.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  action.yml  flake.nix  pyproject.toml  renovate.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  policy_false_positive.md  policy_false_positive.yml  release-checklist.md
.github/workflows/: release.yml  smoke.yml  themis.yml
docs/: ai-providers.md  ai-upstream-politics.md  cli-style.md  cli.md  configuration.md  development.md  github-action.md  integrations.md  mission.md  positioning.md  release-notes-template.md  release.md  security-fixtures.md  stability.md  threat-model.md
docs/assets/: PROMPTS.md  PROVENANCE.md  README.md
docs/schema/: themis.schema.json
examples/: pr-body.md
examples/github-actions/: comment.yml  config-check.yml  self-check.yml  validate.yml
src/themis/: __init__.py  annotations.py  cli.py  completion.py  config_check.py  docs.py  doctor.py  explain.py  git.py  guide.py  init.py  json_report.py  policy.py  pr.py  providers.py  release_audit.py  report.py  review.py  rules.py  sarif_report.py  self_check.py  version_check.py
tests/: example_repo.py  test_action_metadata.py  test_action_routing.py  test_annotations.py  test_cli.py  test_cli_target_repo.py  test_config_check.py  test_docs_links.py  test_doctor.py  test_examples.py  test_explain.py  test_git.py  test_guide.py  test_init_completion.py  test_json_report.py  test_policy.py  test_pr.py  test_providers.py  test_public_metadata.py  test_release_audit.py  test_report.py  test_repository_templates.py  test_review.py  test_rules.py  test_sarif_report.py  test_schema.py  test_self_check.py  test_version_check.py
