[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "themis"
version = "0.1.0"
description = "Paranoid upstream PR validator that protects maintainers from AI slop and low-confidence submissions."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Themis maintainers" }]
license = { text = "MIT" }
keywords = ["ai", "code-review", "github-actions", "maintainers", "pull-requests", "validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/OWNER/themis"
Documentation = "https://github.com/OWNER/themis/tree/main/docs"
Issues = "https://github.com/OWNER/themis/issues"
Source = "https://github.com/OWNER/themis"

[project.scripts]
themis = "themis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
