[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "themis"
version = "1.0.1"
description = "Strict upstream PR validator that protects maintainers from low-confidence AI-assisted submissions."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Themis maintainers" }]
license = { text = "Apache-2.0" }
keywords = ["ai", "code-review", "github-actions", "maintainers", "pull-requests", "validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
themis = "themis.cli:main"

[project.urls]
Homepage = "https://github.com/Pheoxy/themis"
Documentation = "https://github.com/Pheoxy/themis/tree/main/docs"
Issues = "https://github.com/Pheoxy/themis/issues"
Source = "https://github.com/Pheoxy/themis"

[tool.setuptools.packages.find]
where = ["src"]
